# PhoneBed_260403

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/adc_bsp/: adc_bsp.c  adc_bsp.h
main/: CMakeLists.txt  bedstead.cpp  bedstead.h  idf_component.yml  main.cpp  page.cpp  page.h  pillow.cpp  pillow.h
main/img/: alarm_bg.c  alarm_off.c  alarm_on.c  img.h  left_off.c  left_on.c  right_off.c  right_on.c  time_bg.c  warning_bg.c  warning_off.c  warning_on.c
main/img/time_page_mascot/: dove_nest.c  pole.c  time_page_mascot.h
main/img/time_page_mascot/lively_dove/: lively_dove_0000_0001.c  lively_dove_0001_0002.c  lively_dove_0002_0003.c  lively_dove_0003_0004.c  lively_dove_0004_0005.c  lively_dove_0005_0006.c  lively_dove_0006_0007.c  lively_dove_0007_0008.c  lively_dove_0008_0009.c  lively_dove_0009_0010.c  lively_dove_0010_0011.c  lively_dove_0011_0012.c  lively_dove_0012_0013.c  lively_dove_0013_0014.c  lively_dove_0014_0015.c  lively_dove_0015_0016.c  lively_dove_0016_0017.c  lively_dove_0017_0018.c  lively_dove_0018_0019.c  lively_dove_0019_0020.c  lively_dove_0020_0021.c  lively_dove_0021_0022.c  lively_dove_0022_0023.c  lively_dove_0023_0024.c  lively_dove_0024_0025.c  lively_dove_0025_0026.c  lively_dove_0026_0027.c  lively_dove_0027_0028.c  lively_dove_0028_0029.c  lively_dove_0029_0030.c  lively_dove_0030_0031.c  lively_dove_0031_0032.c  lively_dove_0032_0033.c  lively_dove_0033_0034.c  lively_dove_0034_0035.c  lively_dove_0035_0036.c  lively_dove_0036_0037.c  lively_dove_0037_0038.c  lively_dove_0038_0039.c  lively_dove_0039_0040.c  (+3 more)
(+71 files in other folders)
